--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,11 +31,13 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+      - name: Set date environment variable
+        run: echo "IMG_TAG=$(date +"%Y.%m.%d.%s")" >> $GITHUB_ENV
 
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: zops-reader
-          IMG_TAG: $(date +"%Y.%m.%d.%s")
+          IMG_TAG: ${{ env.IMG_TAG }}
         run: ./build.sh
 
