--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,12 +26,16 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Configure AWS credentials
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+      
+      - name: Login to Amazon ACR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      
       - name: Set date environment variable
         run: echo "IMG_TAG=$(date +"%Y.%m.%d.%s")" >> $GITHUB_ENV
 
