--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           tag_prefix: ""
           default_bump: false
-          custom_tag: ${{ format("{0}-{1}", env.DATETIME, env.TAG_NUM) }}
+          custom_tag: ${{ format('{0}-{1}', env.DATETIME, env.TAG_NUM) }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create a GitHub release
@@ -70,7 +70,7 @@ jobs:
         with:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
           release_name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ format("changes made to {0}", steps.get-changed-lambdas.outputs.result) }}
+          body: ${{ format('changes made to {0}', steps.get-changed-lambdas.outputs.result) }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
