flesh out test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,27 @@ jobs:
         with:
           fetch-depth: 0
         uses: actions/checkout@v2
-      - name: bap
+
+      - name: Set date environment variable
+        run: echo "DATETIME=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
+      
+      - name: Set tag number
+        run: echo "TAG_NUM=$(git tag | wc -l)" >> $GITHUB_ENV
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build, tag, and push image(s) to Amazon ECR
         env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMG_TAG: ${{ env.DATETIME }}
           LAMBDAS: "preprocessor zops-reader"
-        run: echo $LAMBDAS
+        run: echo $LAMBDAS | xargs -n 1 -I{} ./scripts/build-push.sh {} y
