--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,5 +33,5 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMG_TAG: ${{ env.DATETIME }}
-          LAMBDAS: "preprocessor zops-reader"
+          LAMBDAS: 'preprocessor zops-reader'
         run: echo $LAMBDAS | xargs -n 1 -I{} ./scripts/build-push.sh {} y
