--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,4 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMG_TAG: ${{ env.DATETIME }}
           LAMBDAS: preprocessor zops-reader
-        run: echo "${LAMBDAS}" | xargs -n 1 -d '\s' -t -I{} ./scripts/build-push.sh {} y
+        run: echo "${LAMBDAS}" | xargs -n 1 -d ' ' -t -I{} ./scripts/build-push.sh {} y
