flesh out test workflow

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -90,4 +90,8 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMG_TAG: ${{ env.DATETIME }}
           LAMBDAS: ${{ steps.get-changed-lambdas.outputs.result }}
-        run: echo $LAMBDAS | xargs -n 1 -I{} ./scripts/build-push.sh {} y
+        run: |
+          for lambda in $LAMBDAS
+          do
+            ./build-scripts $lambda y
+          done
