--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -93,5 +93,5 @@ jobs:
         run: |
           for lambda in $LAMBDAS
           do
-            ./build-scripts $lambda y
+            ./scripts/build-push.sh $lambda y
           done
